# Todo-sync

./: .gitignore  AGENTS.md  code-review.md  code_optimization_suggestions.md  collaborations.schema.json  crop_rembg.py  crop_transparent.py  implementation_plan.md  resize_icons.py  run-tests.ps1  todo_data.schema.json  user_guide.md
.github/workflows/: release.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  todo-release.keystore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/todo/app/: MainActivity.kt  TodoApplication.kt  WidgetAddActivity.kt
android/app/src/main/java/com/todo/app/data/: ConfigManager.kt  WebDavClient.kt
android/app/src/main/java/com/todo/app/utils/: AppUpdater.kt
android/app/src/main/java/com/todo/app/widget/: TodoWidget.kt  (+1 more)
android/app/src/main/res/layout/: todo_widget_placeholder.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: todo_widget_compact_info.xml  todo_widget_info.xml  todo_widget_large_info.xml  todo_widget_medium_info.xml  todo_widget_small_info.xml
android/gradle/: libs.versions.toml
docs/: android_studio_setup.md
windows/: package-lock.json  package.json
windows/src/: dateUtils.js  index.html  main.js  styles.css  tauri-mock.js
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/icons/: icon.icns
windows/src-tauri/src/: lib.rs  todo_store.rs
windows/tests/: check-build.mjs  test-dataLogic.mjs  test-dateUtils.mjs
(+21 files in other folders)
