[package]
name = "todo-app"
version = "1.2.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Todo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
fs2 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
urlencoding = "2"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["sync"] }
base64 = "0.22"
httpdate = "1"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"


